added code for spark streaming Testing